--- a/index.ipynb
+++ b/index.ipynb
@@ -22,18 +22,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "number_50 = 50\n",
     "my_number = None\n",
     "if number_50 > 100:\n",
-    "    # if number_50 is greater than 100, assign the `my_number` variable to the number 100\n",
+    "    my_number = 100 # if number_50 is greater than 100, assign the `my_number` variable to the number 100\n",
     "elif number_50 > 50:\n",
-    "    # if number_50 is greater than 50, assign the `my_number` variable to the number 50\n",
+    "    my_number = 50 # if number_50 is greater than 50, assign the `my_number` variable to the number 50\n",
     "else:\n",
-    "    # else assign the `my_number` variable to 0"
+    "    my_number = 0 # else assign the `my_number` variable to 0"
    ]
   },
   {
@@ -45,13 +45,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "temperature = 85\n",
     "is_it_hot = None\n",
-    "# conditionals go here"
+    "# conditionals go here\n",
+    "if temperature > 80:\n",
+    "    is_it_hot = \"It is so hot out!\"\n",
+    "else:\n",
+    "    is_it_hot = \"This is nothing! Bring on the heat.\""
    ]
   },
   {
@@ -64,13 +68,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "today_is = 4\n",
     "day_of_the_week = None\n",
-    "# conditionals go here"
+    "# conditionals go here\n",
+    "if today_is == 1:\n",
+    "    day_of_the_week = \"Sunday\"\n",
+    "elif today_is == 2:\n",
+    "    day_of_the_week = \"Monday\"\n",
+    "elif today_is == 3:\n",
+    "    day_of_the_week = \"Tuesday\"\n",
+    "elif today_is == 4:\n",
+    "    day_of_the_week = \"Wednesday\"\n",
+    "elif today_is == 5:\n",
+    "    day_of_the_week = \"Thursday\"\n",
+    "elif today_is == 6:\n",
+    "    day_of_the_week = \"Friday\"\n",
+    "elif today_is == 7:\n",
+    "    day_of_the_week = \"Saturday\"\n",
+    "else:\n",
+    "    print(\"That is not a day of the week.\")"
    ]
   },
   {
@@ -82,14 +102,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "string = \"Python\"\n",
     "sub_string = \"on\"\n",
     "ends_with = None\n",
-    "# conditionals go here"
+    "# conditionals go here\n",
+    "if string.endswith(\"on\"):\n",
+    "    ends_with = \"True\"\n",
+    "else:\n",
+    "    ends_with = \"False\""
    ]
   },
   {
@@ -104,9 +128,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "learn-env",
    "language": "python",
-   "name": "python3"
+   "name": "learn-env"
   },
   "language_info": {
    "codemirror_mode": {
@@ -118,9 +142,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
